...
    addExercise(sidePlank)
    
    // Workouts
    
    let workout1 = Workout()
    workout1.userCreated = false
    workout1.name = "7 Minute Workout"
    workout1.restInterval = 10
    workout1.exercises = [jumpingJacks, wallSit, pushups,
      crunches, stepups, squat, tricepsDips, plank, highKnees,
      lunges, pushupRotation, sidePlank]
    
    addWorkout(workout1)
...
