...
            <point key="canvasLocation" x="528" y="1542"/>
        </scene>
        <!--Workouts Navigation Controller-->
        <scene sceneID="g9H-Sc-qk1">
            <objects>
                <navigationController title="Workouts Navigation Controller" automaticallyAdjustsScrollViewInsets="NO" id="eUN-ga-oDc" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Workouts" image="workouts" id="bWn-TU-DHa"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dI6-iQ-y1a">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
